@@ -90,7 +90,8 @@ namespace reports {
 	                       const std::vector<team>& teams, const team& current_team,
 	                       unsigned int current_side, int unsigned active_side,
 	                       const gamemap::location& loc, const gamemap::location& mouseover,
-	                       const gamestatus& status, const std::set<std::string>& observers);
+	                       const gamestatus& status, const std::set<std::string>& observers,
+	                       const config& level);
 }
 
 #endif
