@@ -21,6 +21,7 @@ Version 1.3.6+svn:
    * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
    * Add an additional line below the minimap in the "Multiplayer->Create game"
      screen that displays the size of the selected map. (patch #776 by uso)
+   * Add a tooltip with the experience modifier for the units XP display.
  * WML engine:
    * now [base_unit]id= inside [unit] can extend upon existing unit types
    * new extra_defines key to define in campaigns some other preprocessor
